[package]
name = "parse_link_header"
version = "0.1.0"
authors = ["Yue Yang <g1enyy0ung@gmail.com>"]
edition = "2018"
description = "A library for parse http link header."
categories = ["parsing", "web-programming"]
documentation = "https://docs.rs/parse_link_header"
homepage = "https://github.com/g1eny0ung/parse_link_header"
repository = "https://github.com/g1eny0ung/parse_link_header"
readme = "README.md"
license = "MIT"

[dependencies]
regex = "1"
url = "2.1.1"
